[gd_scene load_steps=7 format=3 uid="uid://dss7tb6c7dh0d"]

[ext_resource type="Script" uid="uid://uhaecjpcqxlk" path="res://Scenes/enemy/enemy.gd" id="1_is6lh"]
[ext_resource type="Texture2D" uid="uid://1u3b3hwqd8yh" path="res://art/tile_0110.png" id="1_swltt"]
[ext_resource type="Texture2D" uid="uid://bb3rcs5nqntir" path="res://art/arrow.png" id="2_fwmcv"]
[ext_resource type="PackedScene" uid="uid://dobujmav78dof" path="res://Scenes/ui/stars_ui.tscn" id="3_is6lh"]
[ext_resource type="PackedScene" uid="uid://c4ohbxkc53qdw" path="res://Scenes/ui/intent.tscn" id="5_y8yvo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8n4j"]

[node name="Enemy" type="Area2D" groups=["enemies"]]
collision_layer = 4
script = ExtResource("1_is6lh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_swltt")

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(16, 0)
rotation = -1.5708
texture = ExtResource("2_fwmcv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n8n4j")

[node name="starsUI" parent="CollisionShape2D" instance=ExtResource("3_is6lh")]
offset_top = 9.0
offset_bottom = 25.0

[node name="Intent" parent="." instance=ExtResource("5_y8yvo")]
offset_top = -23.0
offset_bottom = -9.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
